--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
     <div class="text-center">
       <a class="btn btn-primary" href="/">Home</a>
       <a class="btn btn-primary" href="/team">Team</a>
+      <a class="btn btn-primary" href="/review">Emergency</a>
+      <a class="btn btn-primary" href="/survey">Survey</a>
       <a class="btn btn-primary" href="/logout">Logout</a>
 
     </div>
