--- a/templates/team.html
+++ b/templates/team.html
@@ -13,13 +13,13 @@
     <br>
 
 
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="nikky" class="btn btn-lg btn-info">Nikky</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="jackie" class="btn btn-lg btn-info">Jackie</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="kimberly" class="btn btn-lg btn-info">Kimberly</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
     <a href="person1" class="btn btn-lg btn-info">Person 1</a>
