--- a/templates/jackie.html
+++ b/templates/jackie.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Jackie's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
+<h1 class="bg-primary">Jackie's Short Biography!!</h1>
+<p> I was born in Manhattan, New York city </p>
+<p> I grew up in Brooklyn, New York City </p>
+<p> My greatest dream is to be Indiana Jones/Lara Croft </p>
+<p> My family lives in New York,Puerto Rico,Ecuador,and other places!  </p>
 <img src = "static/images/person.jpg" width="500">
 </p>
 
