--- a/templates/kimberly.html
+++ b/templates/kimberly.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Kimberly's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
+<h1 class="bg-primary">Kimberly's Short Biography!!</h1>
+<p> I was born in Los Angeles, California. </p>
+<p> I grew up in Southern Los Angeles </p>
+<p> My greatest dream is to meet and speak with Kali Uchis</p>
+<p> My family lives in LA! </p>
 <img src = "static/images/person.jpg" width="500">
 </p>
 
