--- a/templates/nikky.html
+++ b/templates/nikky.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Nikky's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
+<h1 class="bg-primary">Nikky's Short Biography!!</h1>
+<p> I was born in Boston, MA. </p>
+<p> I grew up in Boston, MA. </p>
+<p> My greatest dream is to graduate from college with a major in HSSP and a minor in Social Justice. </p>
+<p> My family lives in Dominican Republic and Boston, MA. </p>
 <img src = "static/images.nikky.jpg" width="500">
 </p>
 
