--- a/templates/team.html
+++ b/templates/team.html
@@ -22,7 +22,7 @@
     <a href="kimberly" class="btn btn-lg btn-info">Kimberly</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="julian" class="btn btn-lg btn-info">Julian</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
     <a href="person1" class="btn btn-lg btn-info">Person 1</a>
