--- a/templates/julian.html
+++ b/templates/julian.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Julian's Short Biography!!</h1>
-<p> I was born in. </p>
-<p> I grew up in . </p>
-<p> My greatest dream is  </p>
-<p> My family lives in  </p>
-<img src = "static/images.person.jpg" width="500">
-</p>
+<div class="jumbotron">
+
+  <h1 class="">Julian's Short Biography!!</h1>
+  <p> I was born and raised in Houston, Texas. </p>
+  <p> My greatest dream is   </p>
+  <p> My family lives in Houston, Texas.  </p>
+
+  <img class = "img-square" width="400" src = "static/images/julian.jpg">
+
+</div>
 
 
 {% endblock %}
