--- a/templates/kimberly.html
+++ b/templates/kimberly.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Kimberly's Short Biography!!</h1>
-<p> I was born in Los Angeles, California. </p>
-<p> I grew up in Southern Los Angeles </p>
-<p> My greatest dream is to meet and speak with Kali Uchis</p>
-<p> My family lives in LA! </p>
-<img src = "static/images/person.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="text-center">Kimberly's Short Biography!!</h1>
+  <p> I was born in Los Angeles, California. </p>
+  <p> I grew up in Southern Los Angeles </p>
+  <p> My greatest dream is to meet and speak with Kali Uchis</p>
+  <p> My family lives in LA! </p>
 
+  <img class="img-responsive img-square" width="350" style="border-radius: 10px; margin: 0 auto;" src="static/images/kimberly.jpg">
+</div>
 
 {% endblock %}
