--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,9 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1 class="text-center">BreathWell</h1>
+  <h1 class="text-center">Breathe-Well</h1>
 </div>
+
 
 <div class="text-center">
   <p class="text-warning">
@@ -14,8 +15,8 @@
 <div class="text-center">
   <hr>
   <img class="img-square">
-<h2>Asthma resources</h2>
-  <a href="/review" class="btn btn-lg btn-danger">Take a survey</a>
+<h2>Here Are Your Asthma Resources</h2>
+  <a href="/review" class="btn btn-lg btn-danger">Take a Survey</a>
   <a href="/show" class="btn btn-lg btn-danger">See the surveys</a>
   <h1></h1>
   <!-- img src="/static/images/Logo.jpg" width= "60%"-->
