--- a/templates/nikky.html
+++ b/templates/nikky.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Nikky's Short Biography!!</h1>
-<p> I was born in Boston, MA. </p>
-<p> I grew up in Boston, MA. </p>
-<p> My greatest dream is to graduate from college with a major in HSSP and a minor in Social Justice. </p>
-<p> My family lives in Dominican Republic and Boston, MA. </p>
-<img src = "static/images.nikky.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="text-center">Nikky's Short Biography!!</h1>
 
+  <p>
+    I was born and raised in Boston, MA. My greatest
+    dream is to graduate from college with a major in HSSP
+    and possibly with a minor in Social Justice.
+    The ULTIMATE goal is to be succesful and happy with
+    all of my accomplishments in the future. My family is
+    from the Dominican Republic; however, we live in Boston, MA!
+  </p>
+
+
+  <img class="img-responsive img-square" width="500" style="border-radius: 10px; margin: 0 auto;" src ="static/images/nikky.jpg">
+</div>
 
 {% endblock %}
