--- a/templates/jackie.html
+++ b/templates/jackie.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Jackie's Short Biography!!</h1>
-<p> I was born in Manhattan, New York city </p>
-<p> I grew up in Brooklyn, New York City </p>
-<p> My greatest dream is to be Indiana Jones/Lara Croft </p>
-<p> My family lives in New York,Puerto Rico,Ecuador,and other places!  </p>
-<img src = "static/images/person.jpg" width="500">
-</p>
+<div class="jumbotron">
+
+  <h1 class="">Jackie's Short Biography!!</h1>
+  <p> I was born in Manhattan, New York city </p>
+  <p> I grew up in Brooklyn, New York City </p>
+  <p> My greatest dream is to be Indiana Jones/Lara Croft </p>
+  <p> My family lives in New York,Puerto Rico,Ecuador,and other places!  </p>
+
+  <img class="img-square" width="350" src = "static/images/jackie.jpg">
+</div>
 
 
 {% endblock %}
