--- a/templates/team.html
+++ b/templates/team.html
@@ -2,30 +2,33 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1>Mission Statement</h1>
+  <h1>Mission Statement. Goal?</h1>
   <div>
-    Our goal with this app is to ....
+    Our goal with this app is to be able to tell people based on their answers to our surveys, whether where they live affects their risk of having asthma.
   </div>
   <div class="jumbotron">
-    <h2> Team Members:</h2>
+    <h2> Meet our Great Team!!!</h2>
   <p class="text-warning">
-    Meet our great team!
+    THIS IS WHO WE ARE:
     <br>
 
 
-    <a href="nikky" class="btn btn-lg btn-info">Nikky</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <a href="nikky" class="btn btn-lg btn-info">NIKKY</a>
+      <img class = "img-square" width="100">
     <br>
-    <a href="jackie" class="btn btn-lg btn-info">Jackie</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
-    <br>
-    <a href="kimberly" class="btn btn-lg btn-info">Kimberly</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
-    <br>
-    <a href="julian" class="btn btn-lg btn-info">Julian</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
 
+    <a href="jackie" class="btn btn-lg btn-info">JACKIE</a>
+      <img class = "img-square" width="50">
     <br>
+
+    <a href="kimberly" class="btn btn-lg btn-info">KIMBERLY</a>
+      <img class = "img-square" width="50">
+    <br>
+
+    <a href="julian" class="btn btn-lg btn-info">JULIAN</a>
+      <img class = "img-square" width="75">
+    <br>
+    
   </p>
 </div>
 
